# LightweightStudy

./: .env  .gitignore  .replit  README.md  database.sqlite  package-lock.json  package.json  push-to-github.bat  replit.md  setup.sh  start-backend.py  start-server.bat  tailwind.config.ts  test-assignment.txt  test-content.txt  test-document.md  test-upload.html
attached_assets/: Pasted--Prompt-I-want-to-build-a-clean-fast-and-minimal-music-streaming-web-app-that-pulls-music-wit-1753039650869_1753039650870.txt  Pasted-Create-a-complete-offline-desktop-study-app-for-my-girlfriend-called-Lightweight-It-must-be-priva-1752835493435_1752835493437.txt
backend/: app.py  models.py  requirements.txt
backend/routes/: ai_chat.py  assignments.py  documents.py  study_plan.py  units.py
backend/services/: ai_service.py  document_processor.py  study_planner.py
client/: index.html
client/src/: App.tsx  index.css
electron/: main.js
migrations/: 0000_late_darwin.sql  0000_remarkable_miek.sql  0001_add_notifications.sql  0002_add_profile_image_path.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: database.ts  index.ts  routes.ts  storage-sqlite.ts  storage.ts
shared/: schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
uploads/: .gitkeep  Applied_Surgical_Anatomy_Face_1753778098204.docx  INTRODUCTION TO COMMUNITY HEALTH LECTURE NOTES_1752905394535.docx  Initial Setup_1758572753748.docx  NECK ANATOMY OSCE_1753746069100.docx  Neck_Anatomy_OSCE_Rubrics_Ideal_Answers_MBChB_1753109133393 (1)_1758347072578.docx
(+77 files in other folders)
